--- a/CRM/src/main/webapp/inc/style.css
+++ b/CRM/src/main/webapp/inc/style.css
@@ -11,6 +11,7 @@ body {
 	background-size: cover;
 	background-position: center;
   	background-repeat: no-repeat;
+  	background-color: #c6dddd;
 }
 
 .erreur {
@@ -64,7 +65,7 @@ form div {
 
 fieldset {
     font-weight: bold;
-    background-color: #8FBC8F;
+    background-color: #86b7b7;
 }
 
 h1 {
@@ -76,7 +77,7 @@ h1 {
 	max-width: 800px;
 	margin: auto;
 	padding: 10px;
-	border: thick solid #5CB1AF;
+	border: thick solid #86b7b7;
 }
 .menu h1 {
 	text-align: center;
@@ -105,11 +106,11 @@ h1 {
 }
 
 .menu li a:hover {
-  background-color: #5CB1AF;
+  background-color: #86b7b7;
 }
 
 .menu li .active {
-  background-color: #5CB1AF;
+  background-color: #86b7b7;
 }
 /* END MENU */
 
@@ -131,7 +132,7 @@ h1 {
 }
 
 .view .impair {
-	background-color: #5CB1AF;
+	background-color: #86b7b7;
 }
 
 .view button {
